--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.31",
     "@types/node": "^22.7.5",
     "@types/react-router-dom": "^5.3.3",
     "prettier": "^3.3.3"
