--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
