--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-calendar": "^5.1.0",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
