--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "multicampus_maechu_front": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.1",
