--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
   "devDependencies": {
     "@types/jquery": "^3.5.31",
     "@types/node": "^22.7.5",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "prettier": "^3.3.3"
   }
 }
