--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
