--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "multicampus_maechu_front": "file:",
     "react": "^18.3.1",
@@ -63,9 +64,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/date-fns": "^2.6.3",
     "@types/jquery": "^3.5.31",
     "@types/node": "^22.7.5",
     "@types/react-calendar": "^4.1.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
     "prettier": "^3.3.3"
