feat: 참여 중인 배틀 중 기능 모달 추가

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "multicampus_maechu_front": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -37,7 +38,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-build": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
