--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "18.17.1"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/date-fns": "^2.6.3",
