--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     ]
   },
   "engines": {
-    "node": "18.17.1"
+    "node": ">=18.0.0 <=22.x"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
