--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "multicampus_maechu_front": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
